[package]
name = "chain-poker"
version = "0.1.0"
authors = ["Harrison Parkes"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1" }
schemars = { version = "0.8" }
serde = { version = "1.0" }
thiserror = { version = "2.0" }
cosmwasm-schema = "2.2"
secret-toolkit = { version = "0.10", features = ["permit"] }
cw-storage-plus = { version = "2.0", default-features = false }
secret-toolkit-storage = "0.10"
rand = "0.9"

[[bin]]
name = "schema"
required-features = ["schema"]
